# Kasir

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
src/: App.jsx  App.tsx  index.css
src/components/auth/: ProtectedRoute.tsx
src/components/dashboard/: navConfig.ts
src/components/layout/: AppLayout.jsx  BottomNav.css  BottomNav.jsx  Sidebar.css  Sidebar.jsx  Topbar.css  Topbar.jsx
src/components/ui/: Badge.css  Badge.jsx  Button.css  Button.jsx  EmptyState.css  EmptyState.jsx  Input.css  Input.jsx  Modal.css  Modal.jsx  Skeleton.css  Skeleton.jsx  Toast.css  Toast.jsx
src/context/: AppContext.jsx  CartContext.jsx
src/data/: mockData.js  navConfig.js
src/hooks/: format.js  useAuth.ts
src/layouts/: DashboardLayout.tsx  PublicLayout.tsx
src/lib/: supabase.ts
src/myai/cli/: main.py
src/myai/config/: settings.py
src/myai/core/: exceptions.py  project_scanner.py  usage.py
src/myai/history/: store.py
src/myai/llm/: base.py  factory.py
src/myai/logger/: logger.py
src/pages/Dashboard/: Dashboard.css  Dashboard.jsx
src/pages/Kasir/: HoldOrdersModal.css  HoldOrdersModal.jsx  Kasir.css  Kasir.jsx  PaymentModal.css  PaymentModal.jsx
src/pages/Login/: Login.css  Login.jsx
src/pages/Produk/: ProductFormModal.jsx  Produk.css  Produk.jsx
src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
src/router/: AppRouter.tsx
src/services/: authService.ts
src/stores/: authStore.ts
src/styles/: global.css  tokens.css
src/types/: auth.ts
supabase/: schema.sql
tests/: test_anthropic_provider.py
(+7 files in other folders)
